// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`module api > can include ifRevisionID 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "ifRevisionID": "foo",
      "unset": [
        "year",
        "slug.auto",
      ],
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "arr[1]": null,
        "slug._type": "slug",
        "slug.current": "die-hard-with-a-vengeance",
      },
    },
  },
]
`;

exports[`module api > can pass different document ID 1`] = `
[
  {
    "patch": {
      "id": "moop",
      "unset": [
        "year",
        "slug.auto",
      ],
    },
  },
  {
    "patch": {
      "id": "moop",
      "set": {
        "arr[1]": null,
        "slug._type": "slug",
        "slug.current": "die-hard-with-a-vengeance",
      },
    },
  },
]
`;
